# EdgeFLow

./: .gitignore  readme.md
.github/workflows/: build.yml  test.yml
docs/: edgeflow-architecture.md
edge-flow-node/: Dockerfile  pyproject.toml
edge-flow-node/tests/: test_dummy.py
