[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeflow-node"
version = "0.1.0"
description = "EdgeFlow edge node for Raspberry Pi and cloud deployments"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
